fix overflow in v5 migration guide

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -155,6 +155,10 @@ table {
   display: table;
 }
 
+.table-wrapper {
+  overflow-x: auto;
+}
+
 @media only screen and (max-width: 768px) {
   .hero .hero__title {
     font-size: 36px;
